--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,8 @@
 /* =================================================================== */
 
 body {
-    overflow-x: hidden; 
+    overflow-x: hidden;
+    height: 100%;
 }
 
 .section-image {
